// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`herb-highlight CLI > should highlight file via CLI 1`] = `
"[36m<test-file>[0m

    [90m  1[0m [90m│[0m [38;2;224;108;117m<[0m[38;2;224;108;117mh1[0m [38;2;209;154;102mclass[0m[38;2;86;182;194m=[0m[38;2;152;195;121m"[0m[38;2;152;195;121mtitle[0m[38;2;152;195;121m"[0m[38;2;224;108;117m>[0m
    [90m  2[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221mif[0m user.present? [38;2;190;80;70m%>[0m
    [90m  3[0m [90m│[0m     [38;2;171;178;191mWelcome[0m [38;2;190;80;70m<%=[0m user.name [38;2;190;80;70m%>[0m[38;2;198;120;221m![0m
    [90m  4[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221melse[0m [38;2;190;80;70m%>[0m
    [90m  5[0m [90m│[0m     [38;2;171;178;191mPlease[0m [38;2;171;178;191msign[0m [38;2;171;178;191min[0m
    [90m  6[0m [90m│[0m   [38;2;190;80;70m<%[0m [38;2;198;120;221mend[0m [38;2;190;80;70m%>[0m
    [90m  7[0m [90m│[0m [38;2;224;108;117m</[0m[38;2;224;108;117mh1[0m[38;2;224;108;117m>[0m
"
`;

exports[`herb-highlight CLI > should respect NO_COLOR environment variable 1`] = `
"<test-file>

      1 │ <h1 class="title">
      2 │   <% if user.present? %>
      3 │     Welcome <%= user.name %>!
      4 │   <% else %>
      5 │     Please sign in
      6 │   <% end %>
      7 │ </h1>
"
`;

exports[`herb-highlight CLI > should support --context-lines option 1`] = `
"[36m<test-file>[0m

    [90m  2[0m [90m│[0m [2m  [22m[2;38;2;190;80;70m[2m<%[22m[0m[2m [22m[2;38;2;198;120;221m[2mif[22m[0m[2m user.present? [22m[2;38;2;190;80;70m[2m%>[22m[0m
[36m  → [0m[1m  3[0m [90m│[0m     [38;2;171;178;191mWelcome[0m [38;2;190;80;70m<%=[0m user.name [38;2;190;80;70m%>[0m[38;2;198;120;221m![0m
    [90m  4[0m [90m│[0m [2m  [22m[2;38;2;190;80;70m[2m<%[22m[0m[2m [22m[2;38;2;198;120;221m[2melse[22m[0m[2m [22m[2;38;2;190;80;70m[2m%>[22m[0m
"
`;

exports[`herb-highlight CLI > should support --focus option 1`] = `
"[36m<test-file>[0m

    [90m  1[0m [90m│[0m [2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mh1[22m[0m[2m [22m[2;38;2;209;154;102m[2mclass[22m[0m[2;38;2;86;182;194m[2m=[22m[0m[2;38;2;152;195;121m[2m"[22m[0m[2;38;2;152;195;121m[2mtitle[22m[0m[2;38;2;152;195;121m[2m"[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
    [90m  2[0m [90m│[0m [2m  [22m[2;38;2;190;80;70m[2m<%[22m[0m[2m [22m[2;38;2;198;120;221m[2mif[22m[0m[2m user.present? [22m[2;38;2;190;80;70m[2m%>[22m[0m
[36m  → [0m[1m  3[0m [90m│[0m     [38;2;171;178;191mWelcome[0m [38;2;190;80;70m<%=[0m user.name [38;2;190;80;70m%>[0m[38;2;198;120;221m![0m
    [90m  4[0m [90m│[0m [2m  [22m[2;38;2;190;80;70m[2m<%[22m[0m[2m [22m[2;38;2;198;120;221m[2melse[22m[0m[2m [22m[2;38;2;190;80;70m[2m%>[22m[0m
    [90m  5[0m [90m│[0m [2m    [22m[2;38;2;171;178;191m[2mPlease[22m[0m[2m [22m[2;38;2;171;178;191m[2msign[22m[0m[2m [22m[2;38;2;171;178;191m[2min[22m[0m
"
`;
